Donegit add .! merged and built a table with the electoral bond data

--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -12,4 +12,4 @@ jobs:
 
       - name: Combine content files
         run: |
-          cat content/*.md > README.md
+          cat content/*.md > Readme.md
